# sinjoh

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: on-push-pr.yml
pokeplat_utils/: Cargo.toml  README.md
pokeplat_utils/src/: cli.rs  main.rs  plat_loader.rs
pokeplat_utils/src/sql/: export.rs  mod.rs  repl.rs
pokeplat_utils/src/sql/tables/: area_data.rs  area_lights.rs  area_map_props.rs  land_data.rs  map_headers.rs  map_matrices.rs  map_prop_animation_lists.rs  map_prop_material_shapes.rs  mod.rs
sinjoh_nds/: Cargo.toml  README.md
sinjoh_nds/src/: lib.rs
sinjoh_nds/src/narc/: mod.rs  reader.rs
sinjoh_plat/: Cargo.toml  README.md
sinjoh_plat/src/: area_data.rs  area_light.rs  area_map_props.rs  bdhc.rs  land_data.rs  lib.rs  map_matrix.rs  map_prop_animation_list.rs  map_prop_material_shapes.rs
sinjoh_plat/src/data/: events.rs  map_header_ids.rs  map_headers.rs  mod.rs  scripts.rs  text_banks.rs
