[package]
name = "sinjoh_plat"
version = "0.1.0"
authors = ["Kuruyia <github@kuruyia.net>"]
description = "Data structures for working with Pokémon Platinum file formats"
edition = "2024"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/Kuruyia/sinjoh"

[dependencies]
byteorder = { workspace = true }
lazy_static = { workspace = true }
sinjoh_nds = { path = "../sinjoh_nds" }
thiserror = { workspace = true }
